Add registration flow for admin and users